# abstract_topic_identification

./: .gitignore  README.md  dashboard.py  data.dvc  dvc.yaml  pyproject.toml
config/: main.yaml
data/: raw.dvc
models/dbscan/: model.joblib
models/hdbscan/: labels.npy  model.joblib
notebooks/eda/: 0.1.rgalindo_familiarize_data.ipynb
reports/HTML/: lda.html
src/: prepare_data.py  preprocess_data.py  train.py  train_clus.py
