[tool.poetry]
name = "abstract-topic-identification"
version = "0.1.0"
description = "NSF abstracts topic identification"
authors = ["Roger Galindo <rogherschrodinger@gmail.com>"]
readme = "README.md"
packages = [{include = "abstract_topic_identification"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
